<resources>
    <string name="app_name">Круглая Математика</string>
    <string name="button_start_task">Решать примеры</string>
    <string name="lesson1">Cложение и вычитание однозначных чисел </string>
    <string name="lesson2">Умножение и деление однозначных чисел</string>
    <string name="lesson3">Сложение и вычитание столбиком двухзначных и трехзначных чисел</string>
    <string name="lesson4">Умножение и деление столбиком двухзначных и трехзначных чисел</string>
    <string name="lesson5">Десятичные дроби, их сложение и вычитание столбиком</string>
    <string name="lesson6">Умножение и деление десятичных дробей столбиком</string>
    <string name="lesson7">Возведение в степень числа</string>
    <string name="back">Назад</string>
    <string name="PrevStr">Пред. Страница</string>
    <string name="NextStr">След. Страница</string>
    <string name="LessonStartButt">Учиться</string>
    <string name="LessonTitle1">Cложение и вычитание
        однозначных чисел</string>
    <string name="LessonText1str1">Привет! Сегодня мы с тобой познакомимся с математикой! Ты научишься складывать, вычитать, делить, умножать числа! Давай для начала узнаем, какие бывают числа. Они могут быть однозначными и многозначными! Поговорим об однозначных числах.
    Однозначным называется число, которое состоит из одной цифры. Например, следующие числа являются однозначными:
        0, 1, 2, 3, 4, 5, 6, 7, 8, 9.Однозначное — значит состоит из одного знака. Как же использовать эти числа? Давай расскажу как их складывать и вычитать.

</string>
    <string name="LessontText1str2">
        Рассмотрим следующее простейшее выражение:
1 + 3 = 4
Этот пример можно понять с помощью координатной прямой. Для этого из точки, где располагается число 1, нужно сдвинуться вправо на три шага. В результате мы окажемся в точке, где располагается число 4. На рисунке можно увидеть, как это происходит:
</string>
    <string name="LessontText1str3">
        Знак плюса в выражении 1 + 3 указывает нам, что нужно двигаться вправо в сторону увеличения чисел.
 Совсем необязательно рисовать координатную прямую. Достаточно воображать её в своих мыслях и видеть, где располагаются отрицательные числа и где положительные.</string>
    <string name="LessontText1str4">Найдём значение выражения 1 – 3
Этот пример опять же можно понять с помощью координатной прямой. Для этого из точки, где располагается число 1 нужно сдвинуться влево на три шага. В результате мы окажемся в точке, где располагается отрицательное число −2. На рисунке можно увидеть, как это происходит:

    </string>
    <string name="LessontText1str5">Здесь ты можешь увидеть таблицу сложения и вычитания однозначных чисел,
        ее лучше запомнить. Например, ьебе надо узнать, сколько будет 2+6. В верхней строчке надо найти число 2. В левой колонке надо найти число 6. Нужно найти квадратик, который есть и в строчке вместе с 6 и в колонке вместе с 2. Это число 8. Следовательно, 2+6=8.</string>
    <string name="LessonTitle2">Умножение и деление
        однозначных чисел</string>
    <string name="LessonText2str1">На прошлом уроке мы узнали, как складывать и вычитать однозначные числа. Давай же теперь узнаем как их умножать и делить!</string>
    <string name="LessontText2str2"> Однозначные числа умножаются легко. Достаточно знать таблицу умножения. О ней поговорим немного позже. Есть и другой способ -  сложение. Ведь умножение это ни что иное как сложение несколько раз.
        Чтобы умножить, например, число 4 на число 3, нужно число 4 сложить три раза:</string>
    <string name="LessontText2str3">Теперь познакомимся с делением. Деление это действие, позволяющее что-либо разделить. Деление состоит из трёх параметров: делимого, делителя и частного. Пусть у нас имеются 4 яблока. Разделим их поровну на двоих друзей. Тогда деление покажет сколько яблок достанется каждому. Каждому достанется по два яблока:</string>
    <string name="LessontText2str4">Говоря о делении, можно рассуждать и по-другому. Вернёмся к предыдущему выражению 4 : 2 = 2. Можно посмотреть на делитель 2 и задать вопрос «сколько двоек в четвёрке?» и ответить: «две двойки». Действительно, если сложить две двойки, то получится число 4</string>
    <string name="LessontText2str5">Поговорим о таблице умножения . Как же ей пользоваться? Чтобы найти произведение двух однозначных чисел, например,  5  и  7,  нужно в первом столбце найти число  5,  а в верхней строке — число  7.  На пересечении соответствующих строки и столбца стоит число  35  — это и будет произведение чисел  5  и  7:

5 · 7 = 35.</string>
    <string name="LessonTitle3">Сложение и вычитание
        столбиком двухзначных
        и трехзначных чисел</string>
    <string name="LessonText3str1">t3str1</string>
    <string name="LessontText3str2">t3str2</string>
    <string name="LessontText3str3">t3str3</string>
    <string name="LessontText3str4">t3str4</string>
    <string name="LessontText3str5">t3str5</string>
    <string name="LessonTitle4">Умножение и деление
        столбиком двухзначных
        и трехзначных чисел</string>
    <string name="LessonText4str1">t4str1</string>
    <string name="LessontText4str2">t4str2</string>
    <string name="LessontText4str3">t4str3</string>
    <string name="LessontText4str4">t4str4</string>
    <string name="LessontText4str5">t4str5</string>
    <string name="LessonTitle5">Десятичные дроби,
        их сложение
        и вычитание столбиком</string>
    <string name="LessonText5str1">t5str1</string>
    <string name="LessontText5str2">t5str2</string>
    <string name="LessontText5str3">t5str3</string>
    <string name="LessontText5str4">t5str4</string>
    <string name="LessontText5str5">t5str5</string>
    <string name="LessonTitle6">Умножение и деление
        десятичных дробей
        столбиком</string>
    <string name="LessonText6str1">t6str1</string>
    <string name="LessontText6str2">t6str2</string>
    <string name="LessontText6str3">t6str3</string>
    <string name="LessontText6str4">t6str4</string>
    <string name="LessontText6str5">t6str5</string>
    <string name="LessonTitle7">Возведение в степень
        числа</string>
    <string name="LessonText7str1">t7str1</string>
    <string name="LessontText7str2">t7str2</string>
    <string name="LessontText7str3">t7str3</string>
    <string name="LessontText7str4">t7str4</string>
    <string name="LessontText7str5">t7str5</string>



</resources>